--- a/index.html
+++ b/index.html
@@ -428,6 +428,8 @@
     .goal-field{ display:grid; gap:.4rem; }
     .goal-label{ font-size:.85rem; color:var(--muted); }
     .goal-input{ width:100%; }
+    .goal-checkbox{ display:inline-flex; align-items:center; gap:.5rem; font-size:.9rem; color:#0f172a; }
+    .goal-checkbox input{ width:1.1rem; height:1.1rem; accent-color:var(--accent-500,#4f46e5); }
     .goal-actions{ display:flex; justify-content:flex-end; gap:.5rem; flex-wrap:wrap; }
     .goal-actions [data-delete]{ margin-right:auto; }
     .goal-list{ margin-top:.5rem; padding-left:1.25rem; display:grid; gap:.35rem; list-style:disc; }
