Add background autosave for form inputs

--- a/index.html
+++ b/index.html
@@ -616,6 +616,7 @@
   <script src="schema.js"></script>
   <script src="modes.js"></script>
   <script src="goals.js"></script>
+  <script src="autosave.js"></script>
   <script src="app.js"></script>
   <script>
     (function initApp() {
