--- a/index.html
+++ b/index.html
@@ -498,13 +498,14 @@
     .objective-select__badge{ display:inline-flex; align-items:center; gap:.35rem; padding:.15rem .6rem; border-radius:999px; background:var(--accent-50); border:1px solid var(--accent-200); font-size:.72rem; font-weight:600; color:#4338ca; }
     .objective-select__period{ font-size:.78rem; color:#475569; }
     .objective-select__placeholder{ font-size:.75rem; color:#94a3b8; }
-    .goal-linker{ border:1px solid rgba(148,163,184,.35); background:#f8fafc; border-radius:.9rem; padding:.85rem 1rem; display:grid; gap:.75rem; }
+    .goal-linker{ border:1px solid rgba(148,163,184,.25); background:transparent; border-radius:1rem; padding:.65rem .75rem; display:grid; gap:.65rem; }
     .goal-linker__controls{ display:flex; align-items:center; gap:.75rem; flex-wrap:wrap; }
-    .goal-linker__summary{ font-size:.85rem; font-weight:500; color:#475569; }
-    .goal-linker__panel{ border:1px dashed rgba(148,163,184,.45); background:#fff; border-radius:.75rem; padding:.6rem .75rem; display:grid; gap:.45rem; max-height:220px; overflow:auto; }
+    .goal-linker__summary{ font-size:.85rem; font-weight:500; color:#334155; }
+    .goal-linker__hint{ margin:0; font-size:.8rem; color:#64748b; }
+    .goal-linker__panel{ border:1px solid rgba(148,163,184,.25); background:#fff; border-radius:.75rem; padding:.5rem .65rem; display:grid; gap:.4rem; max-height:220px; overflow:auto; box-shadow:0 .35rem 1.2rem rgba(15,23,42,.08); }
     .goal-linker__panel[hidden]{ display:none; }
-    .goal-linker__option{ display:grid; grid-template-columns:auto 1fr; align-items:flex-start; gap:.55rem; padding:.35rem .45rem; border-radius:.65rem; transition:background .15s ease, box-shadow .15s ease; }
-    .goal-linker__option:hover{ background:rgba(99,102,241,.08); }
+    .goal-linker__option{ display:grid; grid-template-columns:auto 1fr; align-items:flex-start; gap:.55rem; padding:.3rem .4rem; border-radius:.6rem; transition:background .15s ease, box-shadow .15s ease; }
+    .goal-linker__option:hover{ background:rgba(99,102,241,.05); }
     .goal-linker__option input{ width:1.05rem; height:1.05rem; margin-top:.2rem; accent-color:var(--accent-500,#4f46e5); }
     .goal-linker__option-main{ font-weight:600; color:#1f2937; }
     .goal-linker__option-meta{ grid-column:2/span 1; font-size:.75rem; color:#64748b; }
